[gd_scene load_steps=5 format=3 uid="uid://cqom6d435wt10"]

[ext_resource type="Texture2D" uid="uid://cjj2c02vbnjgj" path="res://icon.svg" id="1_86hqj"]
[ext_resource type="Script" uid="uid://s4ycv3s62qbv" path="res://Interactables/spot_base.gd" id="1_7016p"]
[ext_resource type="Script" uid="uid://1rp8hde8jdno" path="res://Interactables/time_counter.gd" id="3_cv30d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5duwn"]

[node name="SpotBase" type="Node2D"]
script = ExtResource("1_7016p")

[node name="Icon" type="Sprite2D" parent="."]
self_modulate = Color(1, 0, 1, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("1_86hqj")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false
script = ExtResource("3_cv30d")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_5duwn")

[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
